# rex

./: CHANGELOG.md  README.md  pyproject.toml
scripts/: smoke.sh
src/rex/: __init__.py  app.py  cli.py  command.py  input.py  main.py  models.py  remote.py
src/rex/ui/: layout.py  render.py
src/rex_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_command_panel_state.py  test_remote_shell.py  test_rex_app_refactor_behavior.py  test_ssh_quoting.py
