[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rex-tui"
version = "0.2"
description = "rex: remote explorer TUI over SSH"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "rex contributors" }]
dependencies = []

[project.scripts]
rex = "rex.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
